--- a/styles/Skills.module.css
+++ b/styles/Skills.module.css
@@ -24,7 +24,7 @@
   font-weight: bold; 
   color: #005bb5;
   margin-bottom: 1.5rem;
-  text-align: left;
+  text-align: center;
   width: 100%;
   border-bottom: 2px solid #0070f3;
   padding-bottom: 5px;
